examples/expected/check_invalid_break.txt
error[E4001]: break outside of loop
  --> examples/invalid_break.tp:1:1
   |
 1 | fn main() {
   | ^
